src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__episode_details_ui__episode_details_ui_tests__tests__snapshot_tests__empty_episode_details_EpisodeHistoryDetails_1.snap
---
source: src/ui/sonarr_ui/library/episode_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Episode Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │ Details │ History │ File │ Manual Search                                                                                 │                     
                    │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                              ╭────────────────────────  Details  ─────────────────────────╮                              │                     
                    │                              │Source Title:                                               │                              │                     
                    │                              │                                                            │                              │                     
                    │                              │No additional data available                                │                              │                     
                    │                              │                                                            │                              │                     
                    │                              │                                                            │                              │                     
                    │                              │                                                            │                              │                     
                    │                              │                                                            │                              │                     
                    │                              │                                                            │                              │                     
                    │                              │                                                            │                              │                     
                    │                              │                                                            │                              │                     
                    │                              │                                                            │                              │                     
                    │                              │                                                            │                              │                     
                    │                              │                                                            │                              │                     
                    │                              │                                                            │                              │                     
                    │                              ╰────────────────────────────────────────────────────────────╯                              │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
